--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div></div>
       </div>
       <div class="text">
-        <h2></h2> Your smile is as beautiful as Rose <br /> 
-       I have Something For your Smile : <a href="new.html">Click Here</a></h2>
+        <h2></h2> Well i couldnt get you roses today but i hope this makes up for it. <br /> 
+       Chikku, roses pale in comparison to your smile and I hope this brightens that smile : <a href="new.html">Click Here</a></h2>
       </div>
     </div>
   </body>
