--- a/new.html
+++ b/new.html
@@ -27,20 +27,12 @@
           <span class="ullu">
             Forever Yours,
             <br />
-            Ullu</span
+            Rohith</span
           >
         </p>
         <div class="address">
-          <img
-            src="https://i.postimg.cc/9Xq7XyF2/Untold-Coding.png"
-            class="mail_stamp"
-          />
         </div>
       </div>
     </div>
-
-    <footer>
-      <p>crafted by @untoldcoding.</p>
-    </footer>
   </body>
 </html>
