--- a/new.html
+++ b/new.html
@@ -15,14 +15,7 @@
         <p>
           <span>My Love,</span>
           <br />
-          On this Rose Day, each petal symbolizes my admiration <br />for you.
-          Your presence colors my world with joy and warmth.Like a rose in full
-          bloom, your beauty captivates my heart. The red roses reflect the
-          passion that burns for you, while the white ones signify the purity of
-          our love. In the garden of life, you're my most cherished blossom.
-          Thank you for being my source of love and inspiration. Our journey
-          together is as sweet as the fragrance of roses. Happy Rose Day, my
-          love. Here's to many more petals of shared laughter and enduring love.
+          Really wanted to get my girl some roses today... well I couldn't but I hope this makes up for it. Chikku is someone really close to my heart... oh well that would be wrong since she is that lil parasite. She is as wonderful as a human can get, not just her beauty even her as a person is as beautiful as anyone can ever be. Her smile, her laugh literally everything abt her is perfect that I could just look at her forever. I never dreamt that I could feel the way I feel about someone the way you make me feel. She has become so freaking special to me that I can never let her go. I want her in my life forever.... gonna never stop holding her hand. I really hope that I've been treating my girl the way should be and want her to be the happiest. Just know that my girl is the dearest to me and that I'll love her forever. 
           <br />
           <span class="ullu">
             Forever Yours,
